<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.xiaopeng.jinglemusic2.ui.CustomTitle
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </com.xiaopeng.jinglemusic2.ui.CustomTitle>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warn"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textColor="@color/orangered" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/thank"
            android:textColor="@color/chocolate" />

        <Button
            android:id="@+id/alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/alipay" />

        <ImageView
            android:id="@+id/wechat"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/wechat" />
    </LinearLayout>

</ScrollView>