<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popbg">

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingRight="12dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_baidu"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/baidu_flac" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_wangyi"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/netease" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_baidump3"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/baidu" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_qq"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/qq" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_xiami"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/xiami" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_kugou"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/kugou" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_kuwo"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/kuwo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_migu"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/migu" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_echo"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/echo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

        <TextView
            android:id="@+id/pop_yiting"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/yiting" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:background="@color/mycolor" />

    </LinearLayout>
</ScrollView>